<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".uiapp.UiActivity">

    <data>
        <import type="android.view.View" />
        <variable
            name="activity"
            type="com.example.mss.uiapp.UiActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5">

            <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/black"
                android:textColor="@color/white"
                android:text="@string/today"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@id/header"
                app:layout_constraintBottom_toBottomOf="@id/header"
                app:layout_constraintStart_toStartOf="@id/header"
                app:layout_constraintWidth_percent="0.5"/>

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_setting"
                android:background="@color/black"
                android:scaleType="fitCenter"
                app:layout_constraintTop_toTopOf="@id/header"
                app:layout_constraintBottom_toBottomOf="@id/header"
                app:layout_constraintEnd_toEndOf="@id/header"
                app:layout_constraintWidth_percent="0.2"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/body"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <TextView
                android:id="@+id/tvAvailRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rooms_avail"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="@id/body"
                app:layout_constraintStart_toStartOf="@id/body"/>
            <TextView
                android:id="@+id/tvRoomCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="20dp"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="@id/body"
                app:layout_constraintStart_toEndOf="@id/tvAvailRoom"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAvailRooms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginVertical="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAvailRoom" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/filterLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvAvailRooms">
                <FrameLayout
                    android:id="@+id/status"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:background="@color/blue"
                    android:layout_marginStart="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/resvation_avail"
                    android:textColor="@color/text_gray"
                    android:textSize="10sp"
                    app:layout_constraintStart_toEndOf="@id/status"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <RadioGroup

                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.8"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resvation_avail"
                        android:textSize="10sp"
                        android:textColor="@color/text_gray"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/external_meeting"
                        android:textSize="10sp"
                        android:textColor="@color/text_gray"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_reservation"
                        android:textSize="10sp"
                        android:textColor="@color/text_gray"/>
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRooms"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="5dp"
                app:layout_constraintTop_toBottomOf="@id/filterLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout> <!-- End of body -->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
